--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,3 +1,10 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:d81ce8a5a915da1b5c00822a6f572d95a4a672ec3dade636188c8383306c85a9
-size 213
+{
+  "compilerOptions": {
+    "composite": true,
+    "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true
+  },
+  "include": ["vite.config.ts"]
+} 
